--- a/templates/App/Datum/_display_value/_price.html.twig
+++ b/templates/App/Datum/_display_value/_price.html.twig
@@ -1,7 +1,7 @@
 <span data-value="{{ datum.value }}"></span>
 
 {% if datum.value %}
-    {{ datum.value|format_currency(getContextUser().currency) }}
+    {{ datum.value|format_currency(datum.currency) }}
 {% else %}
     -
 {% endif %}
