--- a/templates/App/Datum/_display_value/_file.html.twig
+++ b/templates/App/Datum/_display_value/_file.html.twig
@@ -1,4 +1,4 @@
-<span data-value="{{ datum.originalFilename }}"></span>
+<span data-value="{{ datum.originalFilename }}" data-type="string"></span>
 
 {% if datum.file is not empty %}
     <a href="{{ asset(datum.file) }}"
