--- a/templates/App/Datum/_display_value/_date.html.twig
+++ b/templates/App/Datum/_display_value/_date.html.twig
@@ -1,4 +1,4 @@
-<span data-value="{{ datum.value }}"></span>
+<span data-value="{{ datum.value }}" data-type="string"></span>
 
 {% if datum.value is not empty %}
     {{ datum.value|date(app.user.dateFormat|default('Y-m-d')) }}
