--- a/templates/App/Datum/_display_value/_link.html.twig
+++ b/templates/App/Datum/_display_value/_link.html.twig
@@ -1,2 +1,2 @@
-<span data-value="{{ datum.value }}"></span>
+<span data-value="{{ datum.value }}" data-type="string"></span>
 <a href="{{ datum.value }}" target="_blank">{{ datum.value|u.truncate(50, '...') }}</a>
