--- a/templates/App/Datum/_display_value/_price.html.twig
+++ b/templates/App/Datum/_display_value/_price.html.twig
@@ -1,4 +1,4 @@
-<span data-value="{{ datum.value }}"></span>
+<span data-value="{{ datum.value }}" data-type="number"></span>
 
 {% if datum.value %}
     {{ datum.value|format_currency(datum.currency) }}
