--- a/templates/App/Datum/_display_value/_rating.html.twig
+++ b/templates/App/Datum/_display_value/_rating.html.twig
@@ -1,4 +1,4 @@
-<span data-value="{{ datum.value }}"></span>
+<span data-value="{{ datum.value }}" data-type="number"></span>
 
 <div class="star-rating">
     {% for i in 10 .. 1 %}
