--- a/templates/App/Datum/_display_value/_text.html.twig
+++ b/templates/App/Datum/_display_value/_text.html.twig
@@ -1,4 +1,4 @@
-<span data-value="{{ datum.value }}"></span>
+<span data-value="{{ datum.value }}" data-type="string"></span>
 
 {% if underlinedTags is defined %}
     {% for value in datum.value|split(',') %}
