--- a/templates/App/Datum/_display_value/_textarea.html.twig
+++ b/templates/App/Datum/_display_value/_textarea.html.twig
@@ -1,3 +1,3 @@
-<span data-value="{{ datum.value }}"></span>
+<span data-value="{{ datum.value }}" data-type="string"></span>
 
 {{ datum.value|nl2br }}
