Fix html file scrapper + add error logs in admin

--- a/templates/App/Admin/_tabs.html.twig
+++ b/templates/App/Admin/_tabs.html.twig
@@ -15,6 +15,11 @@
                 <span>{{ 'tab.configuration'|trans }}</span>
             </a>
         </li>
+        <li class="tab {{ current == "errors" ? 'current' }}">
+            <a href="{{ path('app_admin_error_index') }}">
+                <span>{{ 'tab.errors'|trans }}</span>
+            </a>
+        </li>
     </ul>
 </div>
 
