--- a/templates/App/Collection/_items_grid.html.twig
+++ b/templates/App/Collection/_items_grid.html.twig
@@ -10,7 +10,7 @@
                 </a>
             </div>
 
-            {% if app.user.displayItemsNameInGridView|default(false) == true %}
+            {% if getContextUser().displayItemsNameInGridView|default(false) == true %}
                 <span class="item-name">{{ item.name }}</span>
             {% endif %}
         </div>
