--- a/templates/App/AdvancedItemSearch/_input_text.html.twig
+++ b/templates/App/AdvancedItemSearch/_input_text.html.twig
@@ -1,4 +1,4 @@
 <div class="input-field outlined">
-    <input type="text" id="__id__" name="__name__">
-    <label for="__id__">{{ 'label.value'|trans }}</label>
+    <input type="text" id="{{ id|default('__id__') }}" name="{{ name|default('__name__') }}" {% if value is defined %} value="{{ value }} {% endif %}">
+    <label for="{{ id|default('__id__') }}">{{ 'label.value'|trans }}</label>
 </div>
