Add item name filter

--- a/templates/App/AdvancedItemSearch/_input_operator.html.twig
+++ b/templates/App/AdvancedItemSearch/_input_operator.html.twig
@@ -4,5 +4,5 @@
             <option value="{{ value }}">{{ label|trans }}</option>
         {% endfor %}
     </select>
-    <label for="__id__">{{ 'label.value'|trans }}</label>
+    <label for="__id__">{{ 'label.operator'|trans }}</label>
 </div>
