--- a/templates/App/AdvancedItemSearch/index.html.twig
+++ b/templates/App/AdvancedItemSearch/index.html.twig
@@ -25,21 +25,29 @@
                 </div>
 
                 {% for filter in block.children.filters %}
-                    <div class="{% if loop.first %}hidden{% endif %}">{{ form_row(filter.condition) }}</div>
-
-                    <div class="s12 l4 offset-l1 xl2 offset-xl1">
-                        {{ form_row(filter.type, {'label' : 'label.type', 'attr': {'data-controller' : 'select--default' } }) }}
+                    <div class="s12 l2 offset-l1 xl1 offset-xl1 {% if loop.first %}visibility-none{% endif %}">
+                        {{ form_row(filter.condition, {'attr': {'data-controller' : 'select--default'}}) }}
                     </div>
 
                     <div class="s12 l4 xl2">
-                        {{ form_row(filter.datum, {'label' : 'label.datum', 'attr': {
+                        {{ form_row(filter.type, {'label' : 'label.type', 'attr': {
                             'data-controller' : 'select--default',
-                            'data-action': 'change->search-filter#loadOperatorAndValueInputs',
-                            'data-search-filter-target': 'datumInput'
+                            'data-action': 'change->search-filter#loadTypeInputs',
+                            'data-search-filter-target': 'typeInput'
                         } }) }}
                     </div>
 
-                    <div class="s12 l4 xl2" data-search-filter-target="operatorInput">
+                    <div class="s12 l4 xl2" data-search-filter-target="datumInputContainer">
+                        {% if filter.datum is defined %}
+                            {{ form_row(filter.datum, {'label' : 'label.item_data', 'attr': {
+                                'data-controller' : 'select--default',
+                                'data-action': 'change->search-filter#loadDatumInputs',
+                                'data-search-filter-target': 'datumInput'
+                            } }) }}
+                        {% endif %}
+                    </div>
+
+                    <div class="s12 l4 xl2" data-search-filter-target="operatorInputContainer">
                         {% if filter.operator is defined %}
                             {{ form_row(filter.operator, {'label' : 'label.operator', 'attr': {
                                 'data-controller' : 'select--default'
@@ -47,13 +55,13 @@
                         {% endif %}
                     </div>
 
-                    <div class="s12 l4 xl2" data-search-filter-target="valueInput">
+                    <div class="s12 l4 xl2" data-search-filter-target="valueInputContainer">
                         {% if filter.value is defined %}
-                            {% include 'App/AdvancedItemSearch/_datum.html.twig' with {
+                            {% include 'App/AdvancedItemSearch/_value.html.twig' with {
                                 id: filter.vars.id ~ '_value',
                                 value: filter.value.vars.value,
                                 name: filter.vars.full_name ~ '[value]',
-                                type: filter.vars.value.datumType,
+                                type: filter.vars.value.type,
                                 datumLabel: filter.vars.value.datumLabel,
                                 datumType: filter.vars.value.datumType,
                             } only %}
