--- a/templates/App/Item/_form_data_block.html.twig
+++ b/templates/App/Item/_form_data_block.html.twig
@@ -10,7 +10,7 @@
 
         <div data-additional-data-target="textsHolder">
             {% for key, datum in data|filter(datum => datum.type in constant('App\\Enum\\DatumTypeEnum::TEXT_TYPES')) %}
-                {% include 'App/Datum/_value.html.twig' with {
+                {% include 'App/Datum/_datum.html.twig' with {
                     datum: datum,
                     iteration: key,
                     type: datum.type,
@@ -68,7 +68,7 @@
 
         <div data-additional-data-target="imagesHolder">
             {% for key, datum in data|filter(datum => datum.type in constant('App\\Enum\\DatumTypeEnum::IMAGE_TYPES')) %}
-                {% include 'App/Datum/_value.html.twig' with {
+                {% include 'App/Datum/_datum.html.twig' with {
                     datum: datum,
                     iteration: key,
                     type: datum.type,
